--- a/lesson-22/scss/style.css
+++ b/lesson-22/scss/style.css
@@ -115,6 +115,12 @@ body {
 .header__top {
   padding: 1.1875em 0;
 }
+@media (max-width: 61.31125em) {
+  .header__main {
+    background-color: transparent;
+  }
+}
+
 .tophead {
   background-color: rgb(55, 57, 63);
   color: #FFF;
@@ -134,12 +140,23 @@ body {
   align-items: center;
   column-gap: 2.5rem;
 }
+.contacts {
+  transition: all 0.4s ease;
+}
 .contacts__item {
-  column-gap: 0.5rem;
+  column-gap: 0.4375rem;
 }
 .contacts__item address {
   display: inline-block;
   font-style: normal;
+}
+.contacts__item span {
+  transition: color 0.2s;
+}
+@media (any-hover: hover) {
+  .contacts__item span:hover {
+    color: rgb(64, 221, 182);
+  }
 }
 .contacts__location {
   flex: 0 1 0.9375rem;
@@ -156,12 +173,12 @@ body {
   column-gap: 2.5rem;
 }
 .social__item {
-  column-gap: 0.5rem;
+  column-gap: 0.4375rem;
 }
 .social__schedule {
-  flex: 0 1 0.875rem;
-  width: 0.875rem;
-  height: 0.875rem;
+  flex: 0 1 1rem;
+  width: 1rem;
+  height: 1rem;
 }
 .list {
   column-gap: 1rem;
@@ -188,7 +205,13 @@ body {
 .mainhead__container {
   gap: 1.875rem;
 }
+@media (max-width: 71.6875em) {
+  .mainhead__container {
+    gap: 0.625rem;
+  }
+}
 .mainhead__logo {
+  display: flex;
   flex-shrink: 0;
   font-family: "Poppins", sans-serif;
   font-size: 1.5625rem;
@@ -201,41 +224,139 @@ body {
 .mainhead__menu {
   gap: 2.5rem;
 }
+@media (max-width: 71.74875em) {
+  .mainhead__menu {
+    gap: 0.625rem;
+  }
+}
 
-.menu__nav {
-  padding: 1.3125rem 0;
-}
-.menu__link {
-  flex-shrink: 0;
-}
 .menu__submenu {
   position: absolute;
   top: 100%;
   left: 0;
-  padding-top: 1.875rem;
+  padding-top: 0.5625rem;
   visibility: hidden;
   opacity: 0;
   transition: all 0.4s ease;
-  transform: translate(0, 0.625em);
+  transform: translate(0, 0.625rem);
   pointer-events: none;
+}
+.menu__link {
+  flex-shrink: 0;
+}
+.menu__button {
+  padding: 1.1875rem;
+  background: rgb(107, 119, 229);
+}
+@media (min-width: 61.31125em) {
+  .menu__button {
+    display: none;
+  }
+}
+.menu__icon-menu {
+  display: none;
+}
+@media (max-width: 61.31125em) {
+  .menu__icon-menu {
+    display: block;
+    width: 1.875rem;
+    height: 1.125rem;
+    flex: 0 0 1.875rem;
+    position: relative;
+    z-index: 10;
+  }
+  .menu__icon-menu::before, .menu__icon-menu::after,
+  .menu__icon-menu span {
+    content: "";
+    height: 0.125rem;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    background-color: #FFF;
+    transition: all 0.4s ease;
+  }
+  .menu__icon-menu::before {
+    top: 0;
+  }
+  .menu__icon-menu::after {
+    bottom: 0;
+  }
+  .menu__icon-menu span {
+    top: 50%;
+    margin-top: -0.0625rem;
+  }
+  .menu-open .menu__icon-menu::before, .menu-open .menu__icon-menu::after {
+    top: 50%;
+    margin-top: -0.0625rem;
+  }
+  .menu-open .menu__icon-menu span {
+    transform: scale(0);
+  }
+  .menu-open .menu__icon-menu::before {
+    transform: rotate(-45deg);
+  }
+  .menu-open .menu__icon-menu::after {
+    transform: rotate(45deg);
+  }
 }
 
 .submenu__list {
-  width: 11.25rem;
-  border-radius: 0.4375rem;
-  padding: 0.9375rem;
-  background-color: #e7e5e5;
+  text-align: left;
+  min-width: 11.25rem;
+  background-color: rgba(227, 227, 227, 0.44);
+}
+@media (any-hover: hover) {
+  .submenu__item:hover .submenu__link {
+    background-color: rgba(229, 229, 229, 0.76);
+  }
 }
 .submenu__item:not(:last-child) {
-  margin-bottom: 0.625em;
+  margin-bottom: 0.125em;
+}
+.submenu__link {
+  display: block;
+  padding: 0.8125rem;
 }
 
+@media (max-width: 61.31125em) {
+  .nav {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: -100%;
+    transition: left 0.3s;
+    background-color: #c3d4f3;
+    padding: 11.875rem 0.9375rem 1.875rem 0.9375rem;
+    overflow: auto;
+  }
+  .nav::before {
+    content: "";
+    position: fixed;
+    width: 100%;
+    height: 3.125rem;
+    top: 0;
+    left: 100%;
+    transition: left 0.3s;
+    z-index: 2;
+  }
+  .menu-open .nav, .menu-open .nav::before {
+    left: 0;
+  }
+}
 .nav__list {
   flex-wrap: wrap;
-  column-gap: 2.5rem;
   row-gap: 0.625rem;
 }
+@media (max-width: 61.31125em) {
+  .nav__list {
+    flex-direction: column;
+    text-align: right;
+    row-gap: 0.9375rem;
+  }
+}
 .nav__item {
+  padding: 1.125rem 1.375rem;
   color: rgb(55, 57, 63);
   font-family: "Inter", sans-serif;
   text-align: center;
@@ -243,7 +364,17 @@ body {
 }
 @media (any-hover: hover) {
   .nav__item:hover {
-    color: rgb(107, 119, 229);
+    background-color: rgba(227, 227, 227, 0.44);
+  }
+}
+@media (max-width: 71.6875em) {
+  .nav__item {
+    padding: 0.5rem 0.75rem;
+  }
+}
+@media (max-width: 61.31125em) {
+  .nav__item {
+    font-size: 1.5625rem;
   }
 }
 .nav__item--arrow {
@@ -264,8 +395,8 @@ body {
 }
 .nav__link::after {
   content: "";
-  flex: 0 0 0.75rem;
-  width: 0.75rem;
+  flex: 0 1 0.5625rem;
+  width: 0.5625rem;
   height: 0.4375rem;
   background: url("../img/icons/menu-arrow.svg") 0 50%/100% no-repeat;
   transition: all 0.4s ease;
@@ -283,7 +414,12 @@ body {
 }
 @media (any-hover: hover) {
   .link:hover {
-    background: rgb(57, 67, 145);
+    background: rgb(75, 88, 190);
+  }
+}
+@media (max-width: 61.31125em) {
+  .link {
+    padding: 1.0625rem 1.9375rem;
   }
 }
 
