--- a/lesson-22/scss/_vars&&templates.scss
+++ b/lesson-22/scss/_vars&&templates.scss
@@ -8,8 +8,8 @@ $secondary-font: 'Poppins', sans-serif; //font
 //---------------COLORS--------------------
 $black-color: #000; // black color
 $white-color: #FFF; // white color
-$green-color: rgb(64, 221, 182);
-$blue-color: rgb(107, 119, 229);
+$green-color: rgb(64, 221, 182); // green color
+$blue-color: rgb(107, 119, 229); // blue color
 $hover-color: rgb(75, 88, 190);
 $second-hover-color: rgba(227, 227, 227, 0.44);
 
